force-app/main/default/objects/Discrepancy1__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Source table: rod_poc_ttl_key
Source column: title
Web service: name: N/A
Web service field:  N/A</description>
    <label>Title</label>
    <length>10</length>
    <type>Text</type>
</CustomField>