force-app/main/default/objects/Discrepancy1__c/fields/Transportation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Mode__c</fullName>
    <description>fas.gsa.gov/services/Order/v1.0</description>
    <label>Transportation Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>