force-app/main/default/objects/Discrepancy1__c/fields/WIP_date__c.field-meta.xml
<CustomField>
    <fullName>WIP_date__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_ssr_wip_dte / csc_mst_ssr_wip_dte
Web service: name: N/A
Web service field: N/A</description>
    <label>WIP date</label>
    <type>Date</type>
</CustomField>