force-app/main/default/objects/Discrepancy1__c/fields/WIP_User__c.field-meta.xml
<CustomField>
    <fullName>WIP_User__c</fullName>
    <description>Source table: rod / csc_mst
Source column: rod_ssr_wip_usr / csc_mst_ssr_wip_usr 
Web service name:N/A
Web service field: N/A</description>
    <label>WIP User</label>
    <length>2</length>
    <type>Text</type>
</CustomField>